--- a/index.html
+++ b/index.html
@@ -100,16 +100,18 @@
   <div class="section">
     <h2>💌 A Letter for You</h2>
     <p>
-      Giada,<br><br>
-      From the moment we met in July 2025, something felt different.
-      Then September 9th changed everything.
-      You make my days brighter, my laughs louder,
-      and my heart feel at home.
-      This little website is just a reminder
-      of how special you are to me.
+      Hai there my cutie girl!!,<br><br> 
+      Today is such a beautiful day, celebrating our first valentine's day together! 
+      For years I've searched for someone like you. Someone who understands how I feel, laughs at my jokes, makes me smile in every way, makes me feel loved!! 
+      You are truly special my queen!! Our relationship is the most perfect I've ever seen!! 
+      I can truly see we really love eachother deeply and want eachother for the rest of our lives!! I know I want you! 
+      Those beautiful green eyes, that orange hair that makes you look like a cute fox, those lips that I would kiss all day, 
+      that skin, sweet as a strawberry (and named like one haha), your curves that make me go crazy, and so on..!! 
+      You're literally perfect boo, and I wouldn't change anything in you Tortita!! Well.. maybe your last name but that's in the future hehe ;3!! 
+      Well, this is all I have to say! We are perfect, you are perfect, and I love you a whole lot!!! You're the best girlfriend ever!! I hope you like this little gift :3 Tu sei l'amore della mia vitta amore mio!!! Sto bene solamente con te!! <3
       <br><br>
       I love you endlessly.  
-      <br>— David 💕
+      <br>— Tato 💕
     </p>
   </div>
 
