--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@
 
   <div class="section">
     <h2>🎶 Our Song</h2>
-    <p>Add a song that reminds you of us 💞</p>
+    <p><iframe data-testid="embed-iframe" style="border-radius:12px" 
+         src="https://open.spotify.com/embed/track/4JNdwEfqwFRiAeEISC8RU8?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></p>
   </div>
 </div>
 
