--- a/index.html
+++ b/index.html
@@ -125,15 +125,15 @@
   <div class="section">
     <h2>📸 Our Memories</h2>
     <div class="gallery">
-      <img src="photo1.jpg">
-      <img src="photo2.jpg">
-      <img src="photo3.jpg">
-      <img src="photo4.jpg">
-      <img src="photo5.jpg">
-      <img src="photo6.jpg">
-      <img src="photo7.jpg">
-      <img src="photo8.jpg">
-      <img src="photo9.jpg">
+      <img src="IMG-20230909-WA0001.jpg">
+      <img src="IMG-20230909-WA0002.jpg">
+      <img src="IMG-20230909-WA0003.jpg">
+      <img src="IMG-20230909-WA0004.jpg">
+      <img src="IMG-20230909-WA0005.jpg">
+      <img src="IMG-20230909-WA0006.jpg">
+      <img src="IMG-20230909-WA0007.jpg">
+      <img src="IMG-20230909-WA0008.jpg">
+      <img src="IMG-20230909-WA0009.jpg">
     </div>
     <p>(I chose 9, because September 9 💕)</p>
   </div>
