--- a/index.html
+++ b/index.html
@@ -81,6 +81,20 @@
       from { opacity: 0; }
       to { opacity: 1; }
     }
+
+.night {
+  background: #1a1a2e;  
+  color: #f5f5f5;        
+}
+
+.night h1, .night h2 {
+  color: #ff9ccf;        
+}
+
+.night .heart {
+  color: #ff9ccf;        
+}
+
   </style>
 </head>
 
@@ -94,6 +108,10 @@
 </div>
 
 <div class="content" id="content">
+
+  <!-- NIGHT MODE BUTTON -->
+  <button onclick="toggleNight()">🌙 Night mode</button>
+  
   <h1>Giada ❤️ David</h1>
   <p>Our little love story</p>
 
@@ -113,7 +131,57 @@
       I love you endlessly.  
       <br>— Tato 💕
     </p>
-  </div>
+
+    <h2>💖 Reasons I Love You</h2>
+<ul>
+  <li>Your laugh</li>
+  <li>Your eyes</li>
+  <li>Your lips</li>
+  <li>Your hair</li>
+  <li>Your kindness</li>
+  <li>Your energy</li>
+  <li>The way you are playfull</li>
+  <li>The way you make me smile</li>
+  <li>The way you care about me</li>
+  <li>The way you love me</li>
+  <li>In general, you're perfect</li>
+</ul>
+
+    <h2>💬 My Favorite Memory</h2>
+<p>
+  One of my favorite moments with you was our Roblox dates!!
+  I think about it more than you could ever imagine.
+</p>
+
+    <div class="section">
+  <h2>💌 My Promises to You</h2>
+  <ul>
+    <li>I'll always try to put a smile on you, even on hard days</li>
+    <li>I'll be your number one fan and I'll support you with everything</li>
+    <li>I'll always love you, and I'll make sure you see that</li>
+    <li>I'm always gonna be by your side in everything you do, good or bad!</li>
+    <li>I'm gonna take you to Dubai one day</li>
+  </ul>
+</div>
+
+    <div class="section">
+  <h2>📍 Our Special Place</h2>
+  <p>July 2025 — The moment we met 💖</p>
+  <p>In Roblox Squid Game was where it all started, and I’ll never forget it!! ❤️</p>
+</div>
+
+    <div class="section">
+  <h2>✈️ Countries We Want to Visit</h2>
+  <p>Our dream holidays together 💕</p>
+  <iframe 
+    src="<iframe src="https://www.google.com/maps/d/embed?mid=1t_w5PF4LZlu1UtkEJWPTPc5qCnIpw54&hl=pt-PT&ehbc=2E312F" width="640" height="480"></iframe>" 
+    width="100%" 
+    height="450" 
+    style="border:0; border-radius:15px;" 
+    allowfullscreen="" 
+    loading="lazy">
+  </iframe>
+</div>
 
   <div class="section">
     <h2>📝 Our Timeline</h2>
@@ -122,19 +190,40 @@
     <p>✨ Today — Still falling for you</p>
   </div>
 
+    <div class="section">
+  <h2>⏳ Countdown</h2>
+  <p id="countdown"></p>
+</div>
+
+   <div id="valentine-popup" style="
+  display:none;
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  background: rgba(0,0,0,0.8);
+  color:white;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  font-size:2em;
+  text-align:center;
+  z-index:9999;
+">
+  💖 Will You Be My Valentine? 💖
+  <div style="margin-top:20px;">
+    <button id="yes-btn" style="padding:10px 20px; font-size:1em; margin:0 10px; border-radius:10px; border:none; background:#ff4d88; color:white; cursor:pointer;">Yes 💕</button>
+    <button id="no-btn" style="padding:10px 20px; font-size:1em; margin:0 10px; border-radius:10px; border:none; background:#aaa; color:white; cursor:pointer;">No 😢</button>
+  </div>
+</div>
+    
   <div class="section">
     <h2>📸 Our Memories</h2>
-    <div class="gallery">
-      <img src="IMG-20230909-WA0001.jpg">
-      <img src="IMG-20230909-WA0002.jpg">
-      <img src="IMG-20230909-WA0003.jpg">
-      <img src="IMG-20230909-WA0004.jpg">
-      <img src="IMG-20230909-WA0005.jpg">
-      <img src="IMG-20230909-WA0006.jpg">
-      <img src="IMG-20230909-WA0007.jpg">
-      <img src="IMG-20230909-WA0008.jpg">
-      <img src="IMG-20230909-WA0009.jpg">
-    </div>
+
+     <img id="slideshow" src="IMG-20230909-WA0001.jpg" style="width:90%; max-width:300px; border-radius:15px; margin:10px auto;">
+    
     <p>(I chose 9, because September 9 💕)</p>
   </div>
 
@@ -143,6 +232,9 @@
     <p><iframe data-testid="embed-iframe" style="border-radius:12px" 
          src="https://open.spotify.com/embed/track/4JNdwEfqwFRiAeEISC8RU8?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></p>
   </div>
+  
+  <button onclick="showSecret()" style="margin-top:20px;">💖 Click me 💖</button>
+<p id="secret" style="display:none;">You’re my everything ❤️</p>
 </div>
 
 <script>
@@ -164,6 +256,67 @@
     document.body.appendChild(heart);
     setTimeout(() => heart.remove(), 6000);
   }, 500);
+
+  function toggleNight() {
+    document.body.classList.toggle("night");
+  }
+
+  const photos = [
+    "IMG-20230909-WA0001.jpg",
+    "IMG-20230909-WA0002.jpg",
+    "IMG-20230909-WA0003.jpg",
+    "IMG-20230909-WA0004.jpg",
+    "IMG-20230909-WA0005.jpg",
+    "IMG-20230909-WA0006.jpg",
+    "IMG-20230909-WA0007.jpg",
+    "IMG-20230909-WA0008.jpg",
+    "IMG-20230909-WA0009.jpg"
+  ];
+
+  let index = 0;
+
+  setInterval(() => {
+    index = (index + 1) % photos.length;
+    document.getElementById("slideshow").src = photos[index];
+  }, 4000);
+
+  function showSecret() {
+    const secret = document.getElementById("secret");
+    if (secret.style.display === "none") {
+      secret.style.display = "block";
+    } else {
+      secret.style.display = "none";
+    }
+  }
+
+  const countDate = new Date("February 14, 2026 00:00:00").getTime();
+
+setInterval(() => {
+  const now = new Date().getTime();
+  const distance = countDate - now;
+
+  const days = Math.floor(distance / (1000 * 60 * 60 * 24));
+  const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+  const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+  const seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+  document.getElementById("countdown").innerHTML = 
+    days + "d " + hours + "h " + minutes + "m " + seconds + "s ";
+}, 1000);
+
+  setTimeout(() => {
+  document.getElementById("valentine-popup").style.display = "flex";
+}, 2000);
+
+document.getElementById("yes-btn").onclick = () => {
+  alert("Yay! 💖 I love you so much! 💖");
+  document.getElementById("valentine-popup").style.display = "none";
+};
+
+document.getElementById("no-btn").onclick = () => {
+  alert("Oh no 😢 I’ll still love you forever! 💕");
+  document.getElementById("valentine-popup").style.display = "none";
+};
 </script>
 
 </body>
